WIP moving to storage table apis
